--- a/index.css
+++ b/index.css
@@ -1,5 +1,32 @@
-div {
-    background-image:url("box-1")
-    background-repeat:no-repeat;
-    background-size:50%;
+.container-2 {
+    display: flex;
+}
+
+.container-2 div {
+    border: 1px solid gray;
+    justify-content: space-between
+}
+
+.box-1 {
+    background-image: url("images/filter-1.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width:50%;
+    flex: 1
+}
+
+.box-2 {
+    background-image: url("images/filter-2.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width:50%;
+    flex: 1
+}
+
+.box-3 {
+    background-image: url("images/filter-3.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width:50%;
+    flex: 1
 }
