--- a/index.css
+++ b/index.css
@@ -1,6 +1,14 @@
+.container-1 {
+    display: flex;
+    padding: 1%
+}
+
 .container-2 {
     display: flex;
-    height: 38% ;
+    justify-content: space-between;
+    padding: 1%;
+    margin: 1% 0% 0% 0%;
+    height: 38%;
     width: 80%;
     }
 
