--- a/index.css
+++ b/index.css
@@ -19,7 +19,8 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
     width: 31%;
-    border: 1px solid rgb(0, 0, 0);
+    box-shadow: 0px 0px 5px black;
+    box-shadow: inset 0 -17px 17px #000000;
 }
 
 .box-2 {
@@ -27,7 +28,8 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
     width: 31%;
-    border: 1px solid rgb(0, 0, 0);
+    box-shadow: 0px 0px 5px black;
+    box-shadow: inset 0 -17px 17px #000000;
 }
 
 .box-3 {
@@ -35,7 +37,8 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
     width: 31%;
-    border: 1px solid rgb(0, 0, 0);
+    box-shadow: 0px 0px 5px black;
+    box-shadow: inset 0 -17px 17px #000000;
 }
 
 .text {
@@ -55,3 +58,12 @@ body {
 .box-3:hover {
     border: 1px solid white;
 }
+
+.numb {
+     margin-top: 5%;
+}
+.numb{
+    font-size:30px;
+     font-weight:bold;
+   color:#000000;
+   }
