--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ body {
     width: 31%;
     box-shadow: 0px 0px 5px black;
     box-shadow: inset 0 -17px 17px #000000;
+    border: 1px solid #000000;
 }
 
 .box-2 {
@@ -30,6 +31,7 @@ body {
     width: 31%;
     box-shadow: 0px 0px 5px black;
     box-shadow: inset 0 -17px 17px #000000;
+    border: 1px solid #000000;
 }
 
 .box-3 {
@@ -39,6 +41,7 @@ body {
     width: 31%;
     box-shadow: 0px 0px 5px black;
     box-shadow: inset 0 -17px 17px #000000;
+    border: 1px solid #000000;
 }
 
 .text {
@@ -60,10 +63,9 @@ body {
 }
 
 .numb {
-     margin-top: 5%;
+     margin-top: 3%;
 }
-.numb{
-    font-size:30px;
-     font-weight:bold;
-   color:#000000;
-   }
+
+.but {
+    margin-top: %
+}
