--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container-1 {
-    padding: 1% 0% 0% 0%;
+    padding: 15px 0px 0px 0px;
 }
 
 .logo {
@@ -14,15 +14,15 @@ body {
 .container-2 {
     display: flex;
     justify-content: space-between;
-    padding: 2% 0% 0% 0%;
-    height: 35%;
+    padding: 30px 0px 0px 0px;
+    height: 225px;
 }
 
 .box-1 {
     background-image: url("images/filter-1.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 31%;
+    width: 420px;
     box-shadow: 0px 0px 5px black;
     box-shadow: inset 0 -17px 17px #000000;
     border: 1px solid #000000;
@@ -32,7 +32,7 @@ body {
     background-image: url("images/filter-2.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 31%;
+    width: 420px;
     box-shadow: 0px 0px 5px black;
     box-shadow: inset 0 -17px 17px #000000;
     border: 1px solid #000000;
@@ -42,7 +42,7 @@ body {
     background-image: url("images/filter-3.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 31%;
+    width: 420px;
     box-shadow: 0px 0px 5px black;
     box-shadow: inset 0 -17px 17px #000000;
     border: 1px solid #000000;
@@ -61,8 +61,8 @@ body {
 }
 
 .text {
-    margin-top: 45%;
-    margin-right: 5%;
+    margin-top: 185px;
+    margin-right: 15px;
     font-size: 18px;
 }
 
@@ -86,8 +86,28 @@ body {
     margin-top: 3%;
 }
 
+.container-3 {
+    margin-top: 20px
+}
+
 .box-4 {
     background-image: url("images/filter-4.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
+    height: 370px;
+    width: 250px;
+    border-radius: 5px 5px 0px 0px;
+    box-shadow: inset 0 -12px 10px #000000;
+}
+
+.text-2 {
+    text-align: center;
+    color: white;
+    box-shadow: inset 0 23px 0px #35354B;
+}
+
+.text-3 {
+    text-align: center;
+    color: white;
+    padding-top: 270px;
 }
