--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   max-width: 1200px;
   margin: 0 auto;
-  background: #16161A;
+  background: #16161a;
 }
 
 .logo > img {
@@ -42,42 +42,80 @@ body {
   border: 1px solid white;
 }
 
-.text {
-  color: rgb(240, 248, 253);
-  position: absolute;
-  top: 140px;
-  right: 20px;
-}
-
-.numb {
-   margin-top: 3%;
-}
-
-.textInput {
-  height: 20px;
+.form {
+  margin: 40px 0 40px;
 }
 
 #list {
-  font-size: 20px;
-  color: white;
-  /* border: 1px solid #000000; */
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1552px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 34px;
+  cursor: pointer;
 }
 
 .list__item {
-  flex: 1 1 20%;
-  margin-left: 25px;
+  width: 224px;
+  transition: transform 0.3s ease;
+  margin-bottom: 76px;
+  margin-right: 34px;
 }
 
-.list__image {
-  font-size: 20px;
-  color: white;
-  background-image: url("https://image.tmdb.org/t/p/w500/927lqua6AHPW4mUflU26yV3APKZ.jpg");
-  background-repeat: no-repeat;
+.list__item:hover {
+  transform: translateY(-3px);
+}
+
+.poster {
   position: relative;
-  background-size: 100%;
-  width: 250px;
-  height: 400px;
+  height: 340px;
+  overflow: hidden;
+  margin-bottom: 27px;
+  box-shadow: 0px 1px 2px rgb(19, 19, 19);
+  transition: box-shadow 0.3s ease;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.poster > img {
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  text-align: center;
+}
+
+.genre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 100%;
+  background-color: rgb(52, 53, 75);
+  color: rgb(200, 200, 200);
+  font-size: 20px;
+  font-weight: 500;
+}
+
+
+
+.rating {
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 7px;
+  color: white;
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+}
+
+span {
+  display: block;
+  color: white;
+  font-size: 22px;
+  font-weight: 600;
 }
