--- a/index.css
+++ b/index.css
@@ -1,17 +1,14 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Calibri, Arial, Helvetica, sans-serif;
     background-color: #16161A;
-}
-
-.container-1 {
-    padding: 15px 0px 0px 0px;
+    width: 1330px;
 }
 
 .logo {
-    height: 60px;
+    padding: 15px 0px 0px 0px;
 }
 
-.container-2 {
+.header {
     display: flex;
     justify-content: space-between;
     padding: 30px 0px 0px 0px;
@@ -60,14 +57,11 @@ body {
     border: 1px solid white;
 }
 
-.text {
+.categories {
     margin-top: 185px;
     margin-right: 15px;
     font-size: 18px;
-}
-
-.text-1 {
-    color: white
+    color: white;
 }
 
 .input {
@@ -76,38 +70,38 @@ body {
     font-size: 20px;
 }
 
-.but {
+.button {
     width: 100px;
     height: 40px;
     font-size: 20px;
 }
 
-.numb {
+.sortNumb {
     margin-top: 3%;
 }
 
-.container-3 {
-    margin-top: 20px
-}
-
-.box-4 {
-    background-image: url("images/filter-4.jpg");
+.divListItem {
+    margin-top: 20px;
+    /* background-image: url("images/filter-4.jpg"); */
     background-repeat: no-repeat;
     background-size: 100%;
     height: 370px;
     width: 250px;
-    border-radius: 5px 5px 0px 0px;
-    box-shadow: inset 0 -12px 10px #000000;
+    border-radius: 10px 10px 0px 0px;
+    box-shadow: inset 0 -23px 20px #000000;
 }
 
-.text-2 {
+.genre_1 {
+    padding: 0px;
     text-align: center;
-    color: white;
+    color: white;   
     box-shadow: inset 0 23px 0px #35354B;
+    border-radius: 10px 10px 0px 0px;
 }
 
-.text-3 {
+.rating_1 {
     text-align: center;
     color: white;
     padding-top: 270px;
+    font-size: 40px
 }
