--- a/index.css
+++ b/index.css
@@ -80,12 +80,13 @@ body {
     margin-top: 3%;
 }
 
-.list {
+#list {
     display: flex;
     justify-content: space-between;
 }
 
 .divListItem { 
+    display: flex;
     margin-top: 20px;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -93,6 +94,13 @@ body {
     width: 250px;
     border-radius: 10px 10px 0px 0px;
     box-shadow: inset 0 -23px 20px #000000;
+}
+
+.imgMovie {
+    position: absolute;
+    height: 370px;
+    width: 250px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .genre_1 {
