--- a/index.css
+++ b/index.css
@@ -83,13 +83,12 @@ body {
 #list {
     display: flex;
     justify-content: space-between;
+    width: 1330px;
+    flex-wrap: wrap;
 }
 
 .divListItem { 
-    display: flex;
     margin-top: 20px;
-    background-repeat: no-repeat;
-    background-size: 100%;
     height: 370px;
     width: 250px;
     border-radius: 10px 10px 0px 0px;
@@ -103,17 +102,18 @@ body {
     border-radius: 10px 10px 0px 0px;
 }
 
-.genre_1 {
-    padding: 0px;
+.textMovie {
     text-align: center;
-    color: white;   
+    color: white;
+    width: 250px;
+}
+
+.genre_1 {  
     box-shadow: inset 0 23px 0px #35354B;
     border-radius: 10px 10px 0px 0px;
 }
 
 .rating_1 {
-    text-align: center;
-    color: white;
     padding-top: 270px;
     font-size: 40px
 }
