--- a/index.css
+++ b/index.css
@@ -78,6 +78,7 @@ body {
 
 .sortNumb {
     margin-top: 3%;
+    text-align: center
 }
 
 #list {
@@ -87,33 +88,39 @@ body {
     flex-wrap: wrap;
 }
 
-.divListItem { 
+.divListItem {
     margin-top: 20px;
     height: 370px;
-    width: 250px;
+    width: 225px;
     border-radius: 10px 10px 0px 0px;
     box-shadow: inset 0 -23px 20px #000000;
 }
 
 .imgMovie {
-    position: absolute;
-    height: 370px;
-    width: 250px;
-    border-radius: 10px 10px 0px 0px;
+    position: relative;
+    top: -40px;
+    height: 340px;
+    width: 225px;
+    box-shadow: inset 0 -23px 20px #000000;
+    z-index: -1;
 }
 
-.textMovie {
+.genre {
+    position: relative;
+    top: -20px;
+    border-radius: 10px 10px 0px 0px;
     text-align: center;
+    width: 100%;
+    background-color: #35354B;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.rating {
+    position: relative;
+    bottom: 110px;
+    text-align: center; 
     color: white;
-    width: 250px;
-}
-
-.genre_1 {  
-    box-shadow: inset 0 23px 0px #35354B;
-    border-radius: 10px 10px 0px 0px;
-}
-
-.rating_1 {
-    padding-top: 270px;
-    font-size: 40px
+    font-size: 40px;
 }
