--- a/index.css
+++ b/index.css
@@ -15,35 +15,26 @@ body {
     height: 225px;
 }
 
-.box-1 {
+.movies_box {
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 420px;
+    box-shadow: 0px 0px 5px black;
+    box-shadow: inset 0 -17px 17px #000000;
+    border: 1px solid #000000;
+}
+
+.movie_1 {
     background-image: url("images/filter-1.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width: 420px;
-    box-shadow: 0px 0px 5px black;
-    box-shadow: inset 0 -17px 17px #000000;
-    border: 1px solid #000000;
-}
+    }
 
-.box-2 {
+.movie_2 {
     background-image: url("images/filter-2.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width: 420px;
-    box-shadow: 0px 0px 5px black;
-    box-shadow: inset 0 -17px 17px #000000;
-    border: 1px solid #000000;
-}
+    }
 
-.box-3 {
+.movie_3 {
     background-image: url("images/filter-3.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width: 420px;
-    box-shadow: 0px 0px 5px black;
-    box-shadow: inset 0 -17px 17px #000000;
-    border: 1px solid #000000;
-}
+    }
 
 .box-1:hover {
     border: 1px solid white;
