--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
     font-family: Calibri, Arial, Helvetica, sans-serif;
     background-color: #16161A;
     width: 1330px;
+    margin: 0 auto;
 }
 
 .logo {
