--- a/index.css
+++ b/index.css
@@ -1,17 +1,246 @@
-div {
-  width: 200px;
-  height: 200px;
-;
-
-  position: absolute;
-  top:0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  margin: auto;
+body {
+  background: #2E2E2E;
 }
-p {
-  text-align: center; 
+.page {
+  background: #2E2E2E;
+  width: 1200px;
+  padding: 20px;
+  margin-left: 120px;
+}
+.logo {
+  height:30px;
+}
+.container-1 {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+
+.image-1 {
+  height: 200px;
+  width: 400px;
+  background-image: url("images/filter-1.jpg");
+  background-size: cover;
+  position: relative;
+  display: block
+}
+.image-1:after { 
+  content: ''; 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  background: rgba(0,0,0,.5);  
+  opacity: 0; 
+}
+
+.image-1:before { 
+  content: ''; 
+  position: absolute; 
+  top: 0; left: 0; 
+  right: 0; 
+  bottom: 0; 
+  background: 
+  url(icon-path); 
+  opacity: 0; 
+}
+
+.image-1:hover:before,
+.image-1:hover:after { 
+  opacity: 1; 
+}
+
+.image-2 {
+  height: 200px;
+  width: 400px;
+  background-image: url("images/filter-2.jpg");
+  background-size: cover;
+  position: relative;
+  display: block
+}
+.image-2:after { 
+  content: ''; 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  background: rgba(0,0,0,.5);  
+  opacity: 0; 
+}
+
+.image-2:before { 
+  content: ''; 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  background: url(icon-path); 
+  opacity: 0; 
+}
+
+.image-2:hover:before,
+.image-2:hover:after { 
+  opacity: 1; 
+}
+.image-3 {
+  height: 200px;
+  width: 400px;
+  background-image: url("images/filter-3.jpg");
+  background-size: cover;
+  position: relative;
+  display: block
+} 
+
+
+.image-3:after { 
+  content: ''; 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  background: rgba(0,0,0,.5);  
+  opacity: 0; 
+}
+
+.image-3:before { 
+  content: ''; 
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  background: url(icon-path); 
+  opacity: 0; 
+}
+
+.image-3:hover:before,
+.image-3:hover:after { 
+  opacity: 1; 
+}
+
+.title1 {
+  color: aliceblue;
+  top: 140px;
+  position: absolute;
+  right: 15px;
+  font-family: 'Montserrat', sans-serif;
+ 
+}
+
+form {
+  width: auto;
+  margin-left: 440px;
+  margin-top: 15px;
+
+}
+input {
+  width: 250px;
+  height: 42px;
+  padding-left: 15px;
+  border-radius: 42px;
+  border: 2px solid #324b4e;
+  background: rgb(102, 102, 101);
+  outline: none;
+  position: relative;
+  transition: .3s linear;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+input:focus {
+  width: 300px;
+}
+
+button {
+  text-decoration: none;
+  outline: none;
+  display: inline-block;
+  border-radius: 30px;
+  background-image: linear-gradient(45deg, #908197 0%, #494949 50%, #1b1a1a 100%);
+  background-position: 100% 0;
+  background-size: 200% 200%;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 9px;
+  font-weight: 300;
+  color: white;
+  box-shadow: 0 16px 32px 0 rgba(0,40,120,.35);
+  transition: .5s;
+}
+
+button:hover {
+  box-shadow: 0 0 0 0 rgba(0,40,120,0);
+  background-position: 0 0;
+}
+
+
+#list{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 34px;
+  margin: 50px;
+  margin-top: 20px;
+}
+    
+#list:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.list__item {
+  width: 224px;
+  margin-bottom: 76px;
   
- }
+  
+}
+
+.poster {
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 300px;
+  width: 245px;
+  position: relative;
+}
+.poster > img {
+  width: 100%;
+  height: 100%;
+}
+
+.genre {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: white;
+  font: bold 25px/55px 'Montserrat', sans-serif; 
+  letter-spacing: -1px;
+  background: rgba(68, 68, 68, 0.945);
+  height: 50px;
+  width: 100%;
+  margin: 0;
+   
+}
+ .rating {
+  color: white;
+  font: bold 40px 'Montserrat', sans-serif; 
+  right: 0;
+  left: 0;
+  text-align: center;
+  position: absolute; 
+}
+
+
+span {
+  display: block;
+  color: white;
+  font-size: 22px;
+  font-weight: 600;
+}
